MDEV-12982 JSON_EXTRACT returns data for invalid JSON.

Let's check the validity to the end of the JSON.